--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -2,22 +2,17 @@
 
 <p>
   <b>Ip:</b>
-  <%= @instance.ip %>
+  <%= @instance.ip_id %>
 </p>
 
 <p>
   <b>Port:</b>
-  <%= @instance.port %>
+  <%= @instance.port_id %>
 </p>
 
 <p>
-  <b>Username:</b>
-  <%= @instance.username %>
-</p>
-
-<p>
-  <b>Password:</b>
-  <%= @instance.password %>
+  <b>Account:</b>
+  <%= @instance.account_id %>
 </p>
 
 <p>
@@ -28,16 +23,6 @@
 <p>
   <b>Need restart:</b>
   <%= @instance.need_restart %>
-</p>
-
-<p>
-  <b>Destination:</b>
-  <%= @instance.destination %>
-</p>
-
-<p>
-  <b>Path:</b>
-  <%= @instance.path %>
 </p>
 
 
