--- a/app/views/instances/index.html.erb
+++ b/app/views/instances/index.html.erb
@@ -1,3 +1,10 @@
+<% if flash[:notice] %>
+  <div style="color: red">
+  	<% flash[:notice].each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </div>
+<% end %>
 <h1>Listing instances</h1>
 
 <table>
