read deployment need to be finished auto deploy need to be finished

--- a/app/views/instances/deploy.html.erb
+++ b/app/views/instances/deploy.html.erb
@@ -2,4 +2,7 @@
 <br />
 <%= @instance.account.username %>
 <br />
-will deploy automatically
+deployed successfully
+<br />
+<br />
+<%= link_to 'Back', instances_path %>
