--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -32,6 +32,6 @@
 
 <br />
 
-<%= link_to 'New Package', new_package_path %>
+<!-- <%= link_to 'New Package', new_package_path %> -->
 <br />
 <%= link_to 'Back', instances_path %>
