--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -5,7 +5,7 @@
     <th>Ip</th>
     <th>Username</th>
     <th>Sort</th>
-    <th>Package array</th>
+    <!-- <th>Package array</th> -->
     <th>Path</th>
     <th></th>
     <th></th>
@@ -17,7 +17,7 @@
     <td><%= package.ip %></td>
     <td><%= package.username %></td>
     <td><%= package.sort %></td>
-    <td><%= package.package_array %></td>
+    <!-- <td><%= package.package_array %></td> -->
     <% if package.path != nil%>
     <td><%= package.path.name %></td>
     <% else %>
