--- a/app/views/instances/index.html.erb
+++ b/app/views/instances/index.html.erb
@@ -41,7 +41,7 @@
 
 <br />
 <%= form_tag :action => 'upload', :multipart => true do %>
-	<%= file_field_tag 'file'  %>
+	<%= file_field 'file','filedata'  %>
 	<%= submit_tag 'upload' %>
 <% end %>
 
